<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Play Recorder +</string>
    <string name="instrument">Instrument</string>
    <string name="fingering">Fingering</string>
    <string name="clef">Clef</string>
    <string name="scale">Scale</string>
    <string name="playSound">Play the Note</string>
    <string name="listen">Listen</string>
    <string name="keepScreenOn">Keep the screen on</string>
    <string name="instrument_title">Select instrument</string>
    <string-array name="instrument_items">
        <item>Sopranino recorder</item>
        <item>Soprano recorder</item>
        <item>Alto recorder</item>
        <item>Tenor recorder</item>
        <item>Bass recorder</item>
        <item>Tin whistle in C</item>
        <item>Tin whistle in D</item>
        <item>Tin whistle in G</item>
        <item>Fife (Yamaha YRF-21)</item>
    </string-array>
    <string name="fingering_title">Select recorder fingering</string>
    <string-array name="fingering_items">
        <item>Baroque</item>
        <item>German</item>
    </string-array>
    <string name="clef_title">Select clef</string>
    <string-array name="clef_items">
        <item>Treble</item>
        <item>Bass</item>
    </string-array>
    <string name="recorder_app_title">%1$s (%2$s)</string>
    <string-array name="note_names">
        <item>C</item>
        <item>C♯/D♭</item>
        <item>D</item>
        <item>D♯/E♭</item>
        <item>E</item>
        <item>F</item>
        <item>F♯/G♭</item>
        <item>G</item>
        <item>G♯/A♭</item>
        <item>A</item>
        <item>A♯/B♭</item>
        <item>B</item>
    </string-array>

    <string name="scale_title">Select scale</string>
    <string-array name="scale_names">
        <item>C♭ major/a♭ minor</item>
        <item>G♭ major/e♭ minor</item>
        <item>D♭ major/b♭ minor</item>
        <item>A♭ major/f minor</item>
        <item>E♭ major/c minor</item>
        <item>B♭ major/g minor</item>
        <item>F major/d minor</item>
        <item>C major/a minor</item>
        <item>G major/e minor</item>
        <item>D major/b minor</item>
        <item>A major/f♯ minor</item>
        <item>E major/c♯ minor</item>
        <item>B major/g♯ minor</item>
        <item>F♯ major/d♯ minor</item>
        <item>C♯ major/a♯ minor</item>
    </string-array>
    <string name="scale_format" translatable="false">(%1$s)</string>
    <string name="promoteRate">Rate PlayRecorder</string>
    <string name="promoteRateDetail">If you enjoy using PlayRecorder, please take a moment to rate it. Thanks for your support!</string>
    <string name="promoteRateNow">Rate</string>
    <string name="promoteRateLater">Later</string>
    <string name="promoteRateNo">No, thanks</string>
    <string name="promoteSupport">Support PlayRecorder</string>
    <string name="promoteSupportDetail">If you enjoy using PlayRecorder, you may consider support the development by buying PlayRecorder +.</string>
    <string name="promoteSupportNow">Buy PlayRecorder +</string>
</resources>
