<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionInstrument"
        android:orderInCategory="100"
        android:title="@string/instrument" />
    <item
        android:id="@+id/actionFingering"
        android:orderInCategory="110"
        android:title="@string/fingering" />
    <item
        android:id="@+id/actionClef"
        android:orderInCategory="120"
        android:title="@string/clef" />
    <item
        android:id="@+id/actionScale"
        android:orderInCategory="125"
        android:title="@string/scale" />
    <item
        android:id="@+id/actionPlaySound"
        android:checkable="true"
        android:orderInCategory="130"
        android:title="@string/playSound" />
    <item
        android:id="@+id/actionListen"
        android:checkable="true"
        android:orderInCategory="140"
        android:title="@string/listen" />
    <item
        android:id="@+id/actionKeepScreenOn"
        android:checkable="true"
        android:orderInCategory="150"
        android:title="@string/keepScreenOn" />
</menu>